fix the width of enter email box on mobile browser

--- a/app/assets/stylesheets/styles/_home.scss
+++ b/app/assets/stylesheets/styles/_home.scss
@@ -255,7 +255,7 @@ html, body {
     }
     #calendar {
         padding-left: 20px;
-        padding-right: 20px;
+        padding-right: 0px;
     }
     .topic_link {
         font-size: 15px;
